[package]
name = "rbftrace-config-detection"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbftrace-core = { path = "../rbftrace-core" }
nc = "0.4.14" # Syscalls
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8"
